RESOLVED FIXED219579
[WebKit] Fix use of max_align_t with gcc 10
https://bugs.webkit.org/show_bug.cgi?id=219579
Summary [WebKit] Fix use of max_align_t with gcc 10
Samuel Thibault
Reported 2020-12-06 07:41:46 PST
Created attachment 415515 [details] proposed fix Hello, This fixes an erroneous use of std::max_align_t, shown by gcc 10 at least.
Attachments
proposed fix (1.17 KB, text/plain)
2020-12-06 07:41 PST, Samuel Thibault
no flags
Patch (1.67 KB, patch)
2020-12-06 13:01 PST, Samuel Thibault
no flags
Samuel Thibault
Comment 1 2020-12-06 13:01:27 PST
EWS
Comment 2 2020-12-06 13:42:52 PST
Committed r270489: <https://trac.webkit.org/changeset/270489> All reviewed patches have been landed. Closing bug and clearing flags on attachment 415527 [details].
Radar WebKit Bug Importer
Comment 3 2020-12-06 13:43:16 PST
Note You need to log in before you can comment on or make changes to this bug.