[WebKit] Fix use of std::max_align_t https://bugs.webkit.org/show_bug.cgi?id=219579

Patch by Samuel Thibault <samuel.thibault@ens-lyon.org> on 2020-12-06
Reviewed by Fujii Hironori.

Standard says that it's alignof(std::max_align_t) that should be used,
not its size, e.g.
https://en.cppreference.com/w/cpp/types/max_align_t
and indeed at least with gcc 10's stddef.h, max_align_t is a structure
containing a long long, a long double, and a float18, thus not a power
of two.

* Shared/SharedDisplayListHandle.h:
(WebKit::SharedDisplayListHandle::headerSize): Use
alignof(std::max_align_t) instead of sizeof(std::max_align_t).

Canonical link: https://commits.webkit.org/232166@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270489 268f45cc-cd09-0410-ab3c-d52691b4dbfc